--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
 						</div>
 					</div>
 				</div>
+				<div class="swiper-button-prev swiper-horizontal-button-prev"></div>
+				<div class="swiper-button-next swiper-horizontal-button-next"></div>
 			</div>
 			<!--<div class="swiper-slide" >-->
 				<!--<div class="section0 section">-->
