--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -177,7 +177,7 @@
 		var property = {
 			width: 1230,
 			height: 800,
-			toolBtns: ["groups", "sort", "where", "output", "input", "join"],
+			toolBtns: ["groups", "sort", "where", "input", "output", "join"],
 			haveHead: true,
 			//        headLabel:true,
 			initLabelText: '流程图',
@@ -194,8 +194,8 @@
 			groups: "分组结点",
 			sort: "排序结点",
 			where: "过滤结点",
-			output: "表输出结点",
 			input: "表输入结点",
+			output: "表输出结点",
 			join: "关联结点",
 			group: "组织划分框编辑开关",
 			//        'new':"新建",
@@ -253,20 +253,7 @@
 				document.getElementById("propertyForm").reset();
 				return true;
 			};
-			//新建流程图
-			//        demo.onBtnNewClick=function() {
-			//          if(this_new) {
-			//            layer.confirm('是否需要保存当前内容？', {
-			//              btn: ['确定','取消'] //按钮
-			//            }, function(){
-			//              fn_saveActionComp_exec(Export());
-			//            }, function(){
-			//              window.location.href = 'etlStencil.html';
-			//            });
-			//          } else {
-			//            window.location.href = 'etlStencil.html';
-			//          }
-			//        };
+			
 			//刷新流程图
 			demo.onFreshClick = function () {
 				location.reload();
@@ -513,10 +500,14 @@
 				$('.extractFields').append(extractFieldHtml);
 
 				var extractField = $('.extractField:last');
-				extractField.find('.table').val(table);
-				extractField.find('.field').val(field);
-				extractField.find('.alias').val(alias);
-				extractField.find('.fn').val(fn);
+				// extractField.find('.table').val(table);
+				extractField.find('.table option[value="'+table+'"]').attr("selected","selected");
+				extractField.find('.field option[value="'+field+'"]').attr("selected","selected");
+				extractField.find('.alias option[value="'+alias+'"]').attr("selected","selected");
+				extractField.find('.fn option[value="'+fn+'"]').attr("selected","selected");
+				// extractField.find('.field').val(field);
+				// extractField.find('.alias').val(alias);
+				// extractField.find('.fn').val(fn);
 
 			});
 		}
@@ -694,7 +685,8 @@
 				}),
 				success: function (data) {
 					if (data.code == 0) {
-						layer.msg('删除成功', { time: 1000 })
+						layer.msg('删除成功', { time: 1000 });
+						init_updateDay();
 					} else {
 						layer.msg(data.message, { time: 1000 })
 					}
@@ -707,7 +699,7 @@
 		function init_updateDay() {
 			$.ajax({
 				type: "POST",
-				url: $url + "/api/action/v1/updateDay",
+				url: $url + "/api/action/v1/updateDag",
 				dataType: "json",
 				contentType: "application/json",
 				data: JSON.stringify({
