修改首页动画

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								<h2>动态可视化数据</h2>
 								<p class="tit">Dynamic visualization data</p>
 								<div class="graphics">
-									<img class="trajectory" src="images/index/trajectory.png" alt="">
+									<div class="trajectory"></div>
 									<img class="wave" src="images/index/wave.png" alt="">
 								</div>
 								<div class="business-end">实时更新最新动态，可视化集群让您每时每刻掌握市场瞬息。<a href="main.html">立即试用</a></div>
