--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -660,8 +660,8 @@
 					$('.saveActionComp').trigger('click');
 				})
 			$(document.body)
-				.off('click', '.auto_save')
-				.on('click', '.auto_save', function () {
+				.off('click', '.more_save')
+				.on('click', '.more_save', function () {
 					$('.generateSql').trigger('click');
 					$('.saveActionComp').trigger('click');
 				})
