--- a/plugin/webContent/input/input.html
+++ b/plugin/webContent/input/input.html
@@ -98,8 +98,8 @@
                     <select class="fields auto_save" style="width:150px;height: 28px;margin-left: 12px;"/></select>
                     <!--<input type="text" class="remark"/>-->
                     <div class="regulation">
-                        <span class="add auto_save"></span>
-                        <span class="lessen auto_save"></span>
+                        <span class="add more_save"></span>
+                        <span class="lessen more_save"></span>
                     </div>
                 </div>
 
