--- a/plugin/webContent/join/join.html
+++ b/plugin/webContent/join/join.html
@@ -201,7 +201,7 @@
                 </select>
             </td>
             <td style="width: 33%"><select class="field2 auto_save"></select></td>
-            <td class="regulation"><span class="add joinsAdd auto_save"></span><span class="lessen joinsLessen auto_save"></span></td>
+            <td class="regulation"><span class="add joinsAdd more_save"></span><span class="lessen joinsLessen more_save"></span></td>
         </tr>
         </tbody>
     </table>
@@ -224,7 +224,7 @@
                     <select class="field auto_save"></select>
                 </td>
                 <td style="width: 32%"><input class="alias auto_save" type="text"/></td>
-                <td class="regulation"><span class="add joinAdd auto_save"></span><span class="lessen joinLessen auto_save"></span></td>
+                <td class="regulation"><span class="add joinAdd more_save"></span><span class="lessen joinLessen more_save"></span></td>
             </tr>
         </tbody>
     </table>
