--- a/plugin/webContent/output/output.html
+++ b/plugin/webContent/output/output.html
@@ -132,7 +132,7 @@
             <tr class="extractField">
                 <td style="width: 40%;"><select class="field auto_save"></select></td>
                 <td style="width: 40%;"><input class="alias auto_save" type="text" /></td>
-                <td class="regulation"><span class="add outputAdd auto_save"></span><span class="lessen outputLessen auto_save"></span></td>
+                <td class="regulation"><span class="add outputAdd more_save"></span><span class="lessen outputLessen more_save"></span></td>
             </tr>
         </tbody>
     </table>
