--- a/plugin/webContent/sort/sort.html
+++ b/plugin/webContent/sort/sort.html
@@ -176,7 +176,7 @@
                     <option>desc</option>
                 </select>
             </td>
-            <td class="regulation"><span class="add sortAdd auto_save"></span><span class="lessen sortLessen auto_save"></span></td>
+            <td class="regulation"><span class="add sortAdd more_save"></span><span class="lessen sortLessen more_save"></span></td>
         </tr>
         </tbody>
     </table>
