--- a/plugin/webContent/where/where.html
+++ b/plugin/webContent/where/where.html
@@ -170,7 +170,7 @@
                     </select>
                 </td>
                 <td><input class="value auto_save" type="text" /></td>
-                <td class="regulation"><span class="add onAdd auto_save"></span><span class="lessen onLessen auto_save"></span></td>
+                <td class="regulation"><span class="add onAdd more_save"></span><span class="lessen onLessen more_save"></span></td>
             </tr>
             </tbody>
         </table>
