--- a/plugin/webContent/groups/groups.html
+++ b/plugin/webContent/groups/groups.html
@@ -178,7 +178,7 @@
             <tbody class="groups">
             <tr class="group">
                 <td><select class="field auto_save"></select></td>
-                <td class="regulation"><span class="add onAdd auto_save"></span><span class="lessen onLessen auto_save"></span></td>
+                <td class="regulation"><span class="add onAdd more_save"></span><span class="lessen onLessen more_save"></span></td>
             </tr>
             </tbody>
         </table>
@@ -210,7 +210,7 @@
                     <option>avg</option>
                 </select>
             </td>
-            <td class="regulation"><span class="add extractAdd auto_save"></span><span class="lessen extractLessen auto_save"></span></td>
+            <td class="regulation"><span class="add extractAdd more_save"></span><span class="lessen extractLessen more_save"></span></td>
         </tr>
         </tbody>
     </table>
