修改数据源的右键菜单插件

--- a/editBI.html
+++ b/editBI.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/form.css" />
 	<link rel="stylesheet" href="css/hyf_test.css">
 	<link rel="stylesheet" href="plugin/mCustomScrollbar/jquery.mCustomScrollbar.css">
+	<link rel="stylesheet" href="plugin/jQuery-contextMenu/jquery.contextMenu.min.css">
 	<!--D3绘图时需要用到的样式文件-->
 	<link rel="stylesheet" href="css/BI_d3.css" />
 
@@ -1114,7 +1115,7 @@
 	<script src="js/login.js"></script>
 	<script src="plugin/zSize/jquery_zsize.js"></script>
 	<script src="plugin/mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
-
+	<script src="plugin/jQuery-contextMenu/jquery.contextMenu.min.js"></script>
 	<!-- 颜色插件 -->
 	<script src="plugin/spectrum/spectrum.js"></script>
 	<script src="plugin/spectrum/docs.js"></script>
