修改ETL。工作流

--- a/plugin/webContent/output/output.html
+++ b/plugin/webContent/output/output.html
@@ -121,7 +121,7 @@
         <input type="text" class="stepName auto_save" readonly="readonly"/>
     </div>
     <div class="related_tit">提取字段:</div>
-    <table class="related_tab" cellspacing="0">
+    <table class="related_tab" cellspacing="0" id="output">
         <thead>
             <tr>
                 <th>列名</th>
