--- a/plugin/webJobStream/end/end.html
+++ b/plugin/webJobStream/end/end.html
@@ -1,7 +1,7 @@
 <table>
     <tr>
         <td class="th">任务名称</td>
-        <td><input type="text" class="manage end_name" readonly="readonly" /></td>
+        <td><input disabled type="text" class="manage end_name" readonly="readonly" /></td>
     </tr>
 </table>
 <div class="saveJobStream save">保存</div>
