--- a/plugin/webJobStream/spark/spark.html
+++ b/plugin/webJobStream/spark/spark.html
@@ -5,7 +5,7 @@
     </tr>
     <tr>
         <td class="th">任务名称</td>
-        <td><input type="text" class="manage spark_task" readonly="readonly"/></td>
+        <td><input disabled type="text" class="manage spark_task" readonly="readonly"/></td>
     </tr>
     <tr>
         <td class="th">程序名称</td>
