--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -480,7 +480,6 @@
 		}
 		//        保存单个组件
 		function fn_save(jsonStr) {
-			// console.log(jsonStr)
 			$.ajax({
 				type: "POST",
 				url: $url + '/api/jobComp/v1/save',///xdbd-etl
@@ -496,9 +495,13 @@
 					"versionId": this_versionId,
 					"attValue": JSON.stringify(jsonStr)
 				}), success: function (data) {
-					if (data.code == 0) {
+					if (data.code === 0) {
 						layer.msg('保存成功!', { time: 1000 });
-					} else {
+					} else if(data.code === 400){
+                        layer.msg('请求参数错误!', { time: 1000 });
+					} else if(data.code === 405){
+                        layer.msg('ETL数据为空!', { time: 1000 });
+                    } else {
 						layer.msg(data.message, { time: 1000 })
 					}
 				}, error: function (data) {
