--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -658,15 +658,23 @@
 		}
 		//子页面的保存与生成sql
 		function init_autosave() {
+			var time = '';
 			$(document.body)
 				.off('change', '.auto_save')
-				.on('change', '.auto_save', function () {console.log(new Date().getTime());
+				.on('change', '.auto_save', function () {
+					var newTime = new Date().getTime();
+					if(time){
+						if((newTime-time)<100){
+							return false;
+						}
+					}
+					time = newTime;
 					$('.generateSql').trigger('click');
 					$('.saveActionComp').trigger('click');
 				});
 			$(document.body)
 				.off('click', '.more_save')
-				.on('click', '.more_save', function () {console.log('emmmmmmm....222.....?????');
+				.on('click', '.more_save', function () {
 					$('.generateSql').trigger('click');
 					$('.saveActionComp').trigger('click');
 				})
