--- a/plugin/webContent/output/output.html
+++ b/plugin/webContent/output/output.html
@@ -4,7 +4,7 @@
             position: absolute;
             right: 20px;
             top: 12px;
-            /*display: none;*/
+            display: none;
         }
         .ensure_save{
             display: inline-block;
