--- a/editBI.html
+++ b/editBI.html
@@ -515,7 +515,7 @@
 	</div>
 	<!--文本筛选-->
 	<div id="filter-attr" class="filter-attr  modal" >
-		<h3>项目属性（城市）<img src="images/icon_guanbi.png" alt="" class="fr"/></h3>
+		<h3>项目属性<img src="images/icon_guanbi.png" alt="" class="fr"/></h3>
 		<div class="f-attr-box clearfix">
 			<div class="f-attr-left fl">
 				<ul class="f-name clearfix">
@@ -535,7 +535,7 @@
 							<li class="fl">
 								<img src="images/icon_circle.png" alt="" />
 								<input type="radio" name="methods"/>
-								<span>自动</span>
+								<span>手动</span>
 							</li>
 						</ul>
 						<div class="f-search-box">
@@ -550,26 +550,26 @@
 						</div>
 						<div class="f-select-cont">
 							<ul>
-								<li>
-									<img src="images/icon_checked.png" alt="" />
-									<input type="checkbox"/>
-									<span>上海</span>
-								</li>
-								<li>
-									<img src="images/icon_checked.png" alt="" />
-									<input type="checkbox"/>
-									<span>北京</span>
-								</li>
-								<li>
-									<img src="images/icon_checked.png" alt="" />
-									<input type="checkbox"/>
-									<span>天津</span>
-								</li>
-								<li>
-									<img src="images/icon_checked.png" alt="" />
-									<input type="checkbox"/>
-									<span>重庆</span>
-								</li>
+								<!--<li>-->
+									<!--<img src="images/icon_checked.png" alt="" />-->
+									<!--<input type="checkbox"/>-->
+									<!--<span>上海</span>-->
+								<!--</li>-->
+								<!--<li>-->
+									<!--<img src="images/icon_checked.png" alt="" />-->
+									<!--<input type="checkbox"/>-->
+									<!--<span>北京</span>-->
+								<!--</li>-->
+								<!--<li>-->
+									<!--<img src="images/icon_checked.png" alt="" />-->
+									<!--<input type="checkbox"/>-->
+									<!--<span>天津</span>-->
+								<!--</li>-->
+								<!--<li>-->
+									<!--<img src="images/icon_checked.png" alt="" />-->
+									<!--<input type="checkbox"/>-->
+									<!--<span>重庆</span>-->
+								<!--</li>-->
 							</ul>
 						</div>
 					</div>
@@ -685,7 +685,7 @@
 				<ul class="f-select-methods clearfix">
 					<li class="fl" onclick="project.contain(this)">
 						<img src="images/icon_circle_on.png" alt="" />
-						<input type="radio" checked />
+						<input type="radio" checked="checked" />
 						<span>包含</span>
 					</li>
 					<li class="fl fl-automatic" onclick="project.filter(this)">
