--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -418,6 +418,7 @@
 		//根据fromTable获取fields
 		function fn_get_fields_by_fromTable(fromTable) {
 			var fieldOut;
+			console.log(actionComps)
 			$.each(actionComps, function (i,item) {
 				if (item.tableOut == fromTable) {
 					// fieldOut = this.fieldOut;
