--- a/plugin/webContent/join/join.html
+++ b/plugin/webContent/join/join.html
@@ -197,7 +197,11 @@
             <td style="width: 33%"><select class="field1 auto_save"></select></td>
             <td style="width: 33%">
                 <select class="expr auto_save">
-                <option>=</option><option><</option><option>></option><option><=</option><option>>=</option>
+                    <option value="=">=</option>
+                    <option value="<"><</option>
+                    <option value=">">></option>
+                    <option value="<="><=</option>
+                    <option value=">=">>=</option>
                 </select>
             </td>
             <td style="width: 33%"><select class="field2 auto_save"></select></td>
