修改BI、elt、工作流bug

--- a/plugin/webContent/input/input.html
+++ b/plugin/webContent/input/input.html
@@ -72,7 +72,8 @@
         }
     </style>
 
-    <!--<div id="aaa" style="height: 100%; width: 400px; border: 1px solid #000;position: relative;">-->
+    <div id="input">
+        <!--<div id="aaa" style="height: 100%; width: 400px; border: 1px solid #000;position: relative;">-->
         <div class="ensure">
             <span class="ensure_load loadParguet">上传源数据</span>
             <span class="ensure_load saveActionComp">保存</span>
@@ -105,4 +106,5 @@
 
             </div>
         </div>
-    <!--</div>-->
+        <!--</div>-->
+    </div>
