--- a/plugin/webJobStream/spark/spark.html
+++ b/plugin/webJobStream/spark/spark.html
@@ -10,7 +10,7 @@
         </tr>
         <tr>
             <td class="th">程序名称</td>
-            <td><input type="text" class="manage spark_name" placeholder="请输入当前程序名称"></td>
+            <td><input type="text" class="manage spark_name" placeholder="请输入当前程序名称(英文+数字)"></td>
         </tr>
     </table>
     <div class="saveJobStream save">保存</div>
