--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -278,6 +278,7 @@
 		</div>
     <script src="../plugin/jQuery/jquery.min.js"></script>
 	<script src="../plugin/d3/d3.v3.min.js"></script>
+	<script  src="../plugin/d3/d3.tip.js"></script>
     <script src="../js/login.js"></script>
     <script src="../plugin/zTree/jquery.ztree.all.min.js"></script>
     <!--<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>-->
