--- a/editBI.html
+++ b/editBI.html
@@ -521,8 +521,8 @@
 				<ul class="f-name clearfix">
 					<li class="active"><a href="javascript:">列表筛选</a></li>
 					<li><a href="javascript:">文本筛选</a></li>
-					<li><a href="javascript:">条件筛选</a></li>
-					<li><a href="javascript:">高级筛选</a></li>
+					<!--<li><a href="javascript:">条件筛选</a></li>-->
+					<!--<li><a href="javascript:">高级筛选</a></li>-->
 				</ul>
 				<div class="f-box">
 					<div class="f-box1">
