--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -226,7 +226,7 @@
 						init_type(id, obj.type, function () {
 							$.getScript("../plugin/webJobStream/" + this_actionCompType + "/" + this_actionCompType + ".js");
 //                            alert("我是刚导入模板！")
-                            console.log("我是刚导入模板！ ----------------------------------");
+                            // console.log("我是刚导入模板！ ----------------------------------");
 						});
 					});
 				} else if (model == "area") {
