--- a/plugin/webContent/join/join.html
+++ b/plugin/webContent/join/join.html
@@ -218,7 +218,7 @@
             <tr>
                 <th>表名</th>
                 <th>列名</th>
-                <th>别名</th>
+                <!-- <th>别名</th> -->
             </tr>
         </thead>
         <tbody class="extractFields">
@@ -227,7 +227,7 @@
                 <td>
                     <select class="field auto_save"></select>
                 </td>
-                <td style="width: 32%"><input class="alias auto_save" type="text"/></td>
+                <!-- <td style="width: 32%"><input class="alias auto_save" type="text"/></td> -->
                 <td class="regulation"><span class="add joinAdd more_save"></span><span class="lessen joinLessen more_save"></span></td>
             </tr>
         </tbody>
