--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -418,7 +418,7 @@
 		//根据fromTable获取fields
 		function fn_get_fields_by_fromTable(fromTable) {
 			var fieldOut;
-			console.log(actionComps)
+			// console.log(JSON.stringify(actionComps))
 			$.each(actionComps, function (i,item) {
 				if (item.tableOut == fromTable) {
 					// fieldOut = this.fieldOut;
@@ -664,6 +664,7 @@
 				.off('change', '.auto_save')
 				.on('change', '.auto_save', function () {
 					var newTime = new Date().getTime();
+					console.log(newTime)
 					if(time){
 						if((newTime-time)<100){
 							return false;
