作业流名称和删除接口更改

--- a/html/etlChart.html
+++ b/html/etlChart.html
@@ -102,6 +102,7 @@
 	</style>
 	<script type="text/javascript" src="../plugin/gooflow/jquery.min.js"></script>
 	<!--<script type="text/javascript" src="../plugin/gooflow/child.js"></script>-->
+	<script src="../plugin/layer/layer.js"></script>
 	<script src="../js/login.js"></script>
 	<script type="text/javascript" src="../plugin/gooflow/GooFunc.js"></script>
 	<!--<script type="text/javascript" src="../plugin/gooflow/json2.js"></script>-->
@@ -110,7 +111,7 @@
 	<script type="text/javascript" src="../plugin/gooflow/promise.min.js"></script>
 	<script type="text/javascript" src="../plugin/gooflow/html2canvas.js"></script>
 	<script type="text/javascript" src="../plugin/gooflow/GooFlow.export.js"></script>
-	<script src="../plugin/layer/layer.js"></script>
+	<!-- <script src="../plugin/layer/layer.js"></script> -->
 	<script>
 		var jobid = localStorage.getItem('directoryId');
 		var this_userId = sessionStorage.getItem('userId');
